--- a/View/Templates/users.twig
+++ b/View/Templates/users.twig
@@ -10,7 +10,8 @@
                     <h2>Users</h2>
                 </div>
                 <div class="users padding15">
-                    <a class="btn btn-primary" href="{{ offset }}/Users/Add">Add User</a>
+                    <a class="btn btn-primary btn-lg" href="{{ offset }}/Users/Add">Add User </a> <br/>
+                    <div class="alert alert-success top10">User saved!</div>
                     <div class="table-responsive">
                         <table class="table table-hover table-striped">
                             <thead>
@@ -36,13 +37,13 @@
 
                     </div>
                     <ul class="pagination">
-                        <li><a href="#">&laquo;</a></li>
+                       <!--<li><a href="#">&laquo;</a></li> -->
 
                        {% for page in pager %}
                         <li class="{{ page.active }}"><a href="{{ page.url }}">{{ page.number }}</a></li>
                        {% endfor %}
 
-                        <li><a href="#">&raquo;</a></li>
+                       <!-- <li><a href="#">&raquo;</a></li> -->
 
                     </ul>
 
