--- a/View/Templates/login.twig
+++ b/View/Templates/login.twig
@@ -10,39 +10,8 @@
 
 
                     <div class="omb_login">
-                        <h3 class="omb_authTitle">Login or <a href="#">Sign
+                        <h3 class="omb_authTitle">Login or <a href="{{ offset }}/Login">Sign
                                 up</a></h3>
-
-                        <div class="row  omb_socialButtons col-sm-offset-1 col-sm-10">
-                            <div class="col-xs-4 col-sm-4">
-                                <a href="#"
-                                   class="btn btn-lg btn-block omb_btn-facebook">
-                                    <i class="fa fa-facebook visible-xs"></i>
-                                    <span class="hidden-xs"><i class="fa fa-facebook"></i>  Facebook</span>
-                                </a>
-                            </div>
-                            <div class="col-xs-4 col-sm-4">
-                                <a href="#"
-                                   class="btn btn-lg btn-block omb_btn-twitter">
-                                    <i class="fa fa-twitter visible-xs"></i>
-                                    <span class="hidden-xs"><i class="fa fa-twitter"></i> Twitter</span>
-                                </a>
-                            </div>
-                            <div class="col-xs-4 col-sm-4">
-                                <a href="#"
-                                   class="btn btn-lg btn-block omb_btn-google">
-                                    <i class="fa fa-google-plus visible-xs"></i>
-                                    <span class="hidden-xs"><i class="fa fa-google-plus"></i>  Google+</span>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="clearfix"></div>
-                        <div class="row omb_loginOr">
-                            <div class="col-xs-12 col-sm-12">
-                                <hr class="omb_hrOr">
-                                <span class="omb_spanOr">or</span>
-                            </div>
-                        </div>
 
                         <div class="row omb_row-sm-offset-3">
                             <div class="col-xs-12 col-sm-6">
@@ -53,7 +22,7 @@
                                                     class="fa fa-user"></i></span>
                                         <input type="text" class="form-control"
                                                name="username"
-                                               placeholder="email address">
+                                               placeholder="Username">
                                     </div>
                                     <span class="help-block"></span>
 
@@ -95,14 +64,9 @@
             </div>
             <div class="col-md-4 top30">
                 <div class="sidebar padding15">
-                    <h2>Installation</h2>
+                    <h2>Login</h2>
 
-                    <p>A small river named Duden flows by their place and
-                        supplies
-                        it with the necessary regelialia. It is a
-                        paradisematic country, in which roasted parts of
-                        sentences
-                        fly into your mouth. </p>
+                    <p>If you have a already an account, please log in. </p>
 
 
                 </div>
