--- a/View/Templates/register.twig
+++ b/View/Templates/register.twig
@@ -7,10 +7,10 @@
             <div class="col-md-8 top30">
 
                 <div class="title padding15">
-                    <h2>Edit User</h2>
+                    <h2>Register User</h2>
                 </div>
                 <div class="users padding15">
-                    <form class="form-horizontal" action="{{ offset }}/Users/Add" method="post">
+                    <form class="form-horizontal" action="{{ offset }}/Register" method="post">
                         <fieldset>
 
 
