--- a/View/Templates/login.twig
+++ b/View/Templates/login.twig
@@ -10,12 +10,12 @@
 
 
                     <div class="omb_login">
-                        <h3 class="omb_authTitle">Login or <a href="{{ offset }}/Login">Sign
+                        <h3 class="omb_authTitle">Login or <a href="{{ offset }}/Register">Sign
                                 up</a></h3>
 
                         <div class="row omb_row-sm-offset-3">
                             <div class="col-xs-12 col-sm-6">
-                                <form class="omb_loginForm" action=""
+                                <form class="omb_loginForm" action="{{ offset }}/Login"
                                       autocomplete="off" method="POST">
                                     <div class="input-group">
                                         <span class="input-group-addon"><i
