Added import function.

--- a/View/Templates/index.twig
+++ b/View/Templates/index.twig
@@ -65,7 +65,7 @@
     <div class="player">
         <script src="{{ offset }}/View/Assets/js/player.js"></script>
         <div class="col-md-12 nopadding">
-            <audio class="audio-player" src="{{ offset }}/Music/Hall of the Mountain King.mp3"></audio>
+            <audio class="audio-player" src="{{ offset }}/Upload/Hall%20of%20the%20Mountain%20King.mp3"></audio>
         </div>
         <div class="clearfix"></div>
     </div>
