--- a/View/Templates/import.twig
+++ b/View/Templates/import.twig
@@ -13,7 +13,7 @@
                     <div class="tab-content">
 
                         <div class="tab-pane active" id="messages">
-                            {{ songs|length }} Songs imported
+                            {{ songs|length }} Songs imported <br/>
                             {% for song in songs %}
                                 Imported {{ song.name }} <br/>
                             {% endfor %}
