--- a/View/Templates/login.twig
+++ b/View/Templates/login.twig
@@ -36,7 +36,12 @@
                                     </div>
 
                                     <br/>
-                                    <div class="alert-danger alert">Password error</div>
+                                    {% if error|length > 0 %}
+                                    <div class="alert-danger alert">{{ error }}</div>
+                                    {% endif%}
+                                    {% if userMessage|length > 0 %}
+                                        <div class="alert alert-success top10">{{ userMessage }}</div>
+                                    {% endif %}
 
                                     <button class="btn btn-lg btn-primary btn-block"
                                             type="submit">Login
