Modified User Login

--- a/View/Templates/login.twig
+++ b/View/Templates/login.twig
@@ -43,7 +43,7 @@
                                         <div class="alert alert-success top10">{{ userMessage }}</div>
                                     {% endif %}
 
-                                    <button class="btn btn-lg btn-primary btn-block"
+                                    <button class="btn btn-lg btn-primary btn-block" name="submit"
                                             type="submit">Login
                                     </button>
                                 </form>
