--- a/View/Templates/index.twig
+++ b/View/Templates/index.twig
@@ -37,7 +37,14 @@
             <h1>VotePlayer</h1>
         </div>
         <div class="col-md-4 col-sm-4 col-xs-12 text-right user-logged-in">
-            <i class="fa fa-user"></i> <a class="login" href="{{ offset }}/Login"> Login </a>
+            <i class="fa fa-user"></i> <a class="login"
+            {% if currentLogin|length > 0 %}
+                    {{ currentLogin.username }}
+            {% else %}
+                     href="{{ offset }}/Login"> Login </a>
+            {% endif %}
+
+
         </div>
     </div>
 
